tests/algorithms/x/C/graphs/strongly_connected_components.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/graphs/strongly_connected_components.c: In function ‘strongly_connected_components’:
/workspace/mochi/tests/algorithms/x/C/graphs/strongly_connected_components.c:197:185: error: request for member ‘lens’ in something not a structure or union
  197 |                 reversed[(int)(neighbour)] = list_append_int_new(reversed[(int)({long long _mochi_idx = neighbour; _mochi_idx < 0 ? reversed_len + _mochi_idx : _mochi_idx;})], reversed.lens[(int)(neighbour)], i);
      |                                                                                                                                                                                         ^
