tests/algorithms/x/C/graphs/strongly_connected_components.c
// Generated by Mochi 0.10.32 on 2025-08-16 11:14 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t topology_sort_len;
size_t find_component_len;
size_t strongly_connected_components_len;
size_t *strongly_connected_components_lens;

size_t append_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%lld", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static char* str_list_list_int(long long **arr, size_t len, const size_t lens[]) {
    size_t cap = 2;
    for (size_t i = 0; i < len; i++) cap += lens[i] * 32 + 3;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char *inner = str_list_int(arr[i], lens[i]);
        size_t n = strlen(inner);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, inner, n);
        pos += n;
        free(inner);
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static long long* list_append_int_new(const long long *arr, size_t len, long long val) {
    long long *res = malloc((len + 1) * sizeof(long long));
    if (arr && len) memcpy(res, arr, len * sizeof(long long));
    res[len] = val;
    append_len = len + 1;
    return res;
}

static long long** list_append_intptr(long long **arr, size_t *len, long long *val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t* list_append_szt(size_t *arr, size_t *len, size_t val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t concat_len;
static long long* concat_long_long(long long *a, size_t a_len, const long long *b, size_t b_len) {
    long long *res = realloc(a, (a_len + b_len) * sizeof(long long));
    if (b_len > 0) memcpy(res + a_len, b, b_len * sizeof(long long));
    concat_len = a_len + b_len;
    return res;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long * topology_sort(long long * * graph, size_t graph_len, size_t* graph_lens, size_t graph_lens_len, long long vert, long long * visited, size_t visited_len);
long long * find_component(long long * * graph, size_t graph_len, size_t* graph_lens, size_t graph_lens_len, long long vert, long long * visited, size_t visited_len);
long long * * strongly_connected_components(long long * * graph, size_t graph_len, size_t* graph_lens, size_t graph_lens_len);
void user_main();
int main(void);

long long * topology_sort(long long * * graph, size_t graph_len, size_t* graph_lens, size_t graph_lens_len, long long vert, long long * visited, size_t visited_len) {
    visited[(int)(vert)] = 1LL;
    long long *order = NULL;
    size_t order_len = 0;
    {
        long long* __tmp0 = graph[(int)({long long _mochi_idx = vert; _mochi_idx < 0 ? graph_len + _mochi_idx : _mochi_idx;})];
        size_t __tmp0_len = graph_lens[vert];
        for (size_t __i = 0; __i < __tmp0_len; __i++) {
            long long neighbour = __tmp0[__i];
            if (!(visited[(int)({long long _mochi_idx = neighbour; _mochi_idx < 0 ? visited_len + _mochi_idx : _mochi_idx;})])) {
                order = concat_long_long(order, order_len, topology_sort(graph, graph_len, graph_lens, graph_len, neighbour, visited, visited_len), topology_sort_len);
                order_len = concat_len;
            }
        }
    }
    order = list_append_long_long(order, &order_len, vert);
    return topology_sort_len = order_len, order;
}

long long * find_component(long long * * graph, size_t graph_len, size_t* graph_lens, size_t graph_lens_len, long long vert, long long * visited, size_t visited_len) {
    visited[(int)(vert)] = 1LL;
    long long *comp = NULL;
    size_t comp_len = 0;
    comp = list_append_long_long(comp, &comp_len, vert);
    {
        long long* __tmp1 = graph[(int)({long long _mochi_idx = vert; _mochi_idx < 0 ? graph_len + _mochi_idx : _mochi_idx;})];
        size_t __tmp1_len = graph_lens[vert];
        for (size_t __i = 0; __i < __tmp1_len; __i++) {
            long long neighbour = __tmp1[__i];
            if (!(visited[(int)({long long _mochi_idx = neighbour; _mochi_idx < 0 ? visited_len + _mochi_idx : _mochi_idx;})])) {
                comp = concat_long_long(comp, comp_len, find_component(graph, graph_len, graph_lens, graph_len, neighbour, visited, visited_len), find_component_len);
                comp_len = concat_len;
            }
        }
    }
    return find_component_len = comp_len, comp;
}

long long * * strongly_connected_components(long long * * graph, size_t graph_len, size_t* graph_lens, size_t graph_lens_len) {
    long long n = graph_len;
    long long *visited = NULL;
    size_t visited_len = 0;
    for (int _ = 0LL; _ < n; _++) {
        visited = list_append_long_long(visited, &visited_len, 0LL);
    }
    long long **reversed = NULL;
    size_t reversed_len = 0;
    size_t *reversed_lens = NULL;
    size_t reversed_lens_len = 0;
    for (int _ = 0LL; _ < n; _++) {
        reversed = list_append_intptr(reversed, &reversed_len, ({long long* tmp = malloc(0 * sizeof(long long)); tmp;}));
        reversed_lens = list_append_szt(reversed_lens, &reversed_lens_len, 0);
    }
    for (int i = 0LL; i < n; i++) {
        {
            long long* __tmp2 = graph[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? graph_len + _mochi_idx : _mochi_idx;})];
            size_t __tmp2_len = graph_lens[i];
            for (size_t __i = 0; __i < __tmp2_len; __i++) {
                long long neighbour = __tmp2[__i];
                reversed[(int)(neighbour)] = list_append_int_new(reversed[(int)({long long _mochi_idx = neighbour; _mochi_idx < 0 ? reversed_len + _mochi_idx : _mochi_idx;})], reversed.lens[(int)(neighbour)], i);
            }
        }
    }
    long long *order = NULL;
    size_t order_len = 0;
    for (int i = 0LL; i < n; i++) {
        if (!(visited[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? visited_len + _mochi_idx : _mochi_idx;})])) {
            order = concat_long_long(order, order_len, topology_sort(graph, graph_len, graph_lens, graph_len, i, visited, visited_len), topology_sort_len);
            order_len = concat_len;
        }
    }
    visited = NULL;
    visited_len = 0;
    for (int _ = 0LL; _ < n; _++) {
        visited = list_append_long_long(visited, &visited_len, 0LL);
    }
    long long **components = NULL;
    size_t components_len = 0;
    size_t *components_lens = NULL;
    size_t components_lens_len = 0;
    long long i = 0LL;
    while (i < n) {
        long long v = order[(int)({long long _mochi_idx = (n - i) - 1LL; _mochi_idx < 0 ? order_len + _mochi_idx : _mochi_idx;})];
        if (!(visited[(int)({long long _mochi_idx = v; _mochi_idx < 0 ? visited_len + _mochi_idx : _mochi_idx;})])) {
            long long *comp = find_component(reversed, reversed_len, reversed_lens, reversed_len, v, visited, visited_len);
            size_t comp_len = find_component_len;
            components = list_append_intptr(components, &components_len, comp);
            components_lens = list_append_szt(components_lens, &components_lens_len, comp_len);
        }
        i = i + 1LL;
    }
    return strongly_connected_components_lens = components_lens, strongly_connected_components_len = components_len, components;
}

void user_main() {
    long long test_graph_1_0[2] = {2LL, 3LL};
    long long test_graph_1_1[1] = {0LL};
    long long test_graph_1_2[1] = {1LL};
    long long test_graph_1_3[1] = {4LL};
    long long test_graph_1_4[0] = {};
    long long *test_graph_1_init[5] = {test_graph_1_0, test_graph_1_1, test_graph_1_2, test_graph_1_3, test_graph_1_4};
    long long **test_graph_1 = test_graph_1_init;
    size_t test_graph_1_len = 5;
    size_t test_graph_1_lens_init[5] = {2, 1, 1, 1, 0};
    size_t *test_graph_1_lens = test_graph_1_lens_init;
    size_t test_graph_1_lens_len = 5;
    long long test_graph_2_0[3] = {1LL, 2LL, 3LL};
    long long test_graph_2_1[1] = {2LL};
    long long test_graph_2_2[1] = {0LL};
    long long test_graph_2_3[1] = {4LL};
    long long test_graph_2_4[1] = {5LL};
    long long test_graph_2_5[1] = {3LL};
    long long *test_graph_2_init[6] = {test_graph_2_0, test_graph_2_1, test_graph_2_2, test_graph_2_3, test_graph_2_4, test_graph_2_5};
    long long **test_graph_2 = test_graph_2_init;
    size_t test_graph_2_len = 6;
    size_t test_graph_2_lens_init[6] = {3, 1, 1, 1, 1, 1};
    size_t *test_graph_2_lens = test_graph_2_lens_init;
    size_t test_graph_2_lens_len = 6;
    puts(({long long **__tmp5 = strongly_connected_components(test_graph_1, test_graph_1_len, test_graph_1_lens, test_graph_1_len); char *__res = str_list_list_int(__tmp5, strongly_connected_components_len, strongly_connected_components_lens); __res;}));
    puts(({long long **__tmp6 = strongly_connected_components(test_graph_2, test_graph_2_len, test_graph_2_lens, test_graph_2_len); char *__res = str_list_list_int(__tmp6, strongly_connected_components_len, strongly_connected_components_lens); __res;}));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
